# software_renderer

./: CMakeLists.txt  README.md  main.cpp  matrix.h  model.cpp  model.h  renderer.cpp  renderer.h
src/: color.h  main.cpp  matrix.cpp  matrix.h  model.cpp  model.h  renderer.cpp  renderer.h  vertex.h
